docs: Add platform concerns and refine cloud-native templates
- Update CLAUDE-DEFAULT.md with expanded principles, technology stack,
  deployment guidelines, and tools matrix
- Add ENGG.MD with platform-level concerns (service mesh, GitOps,
  secrets management, DR, chaos engineering, K8s configs)
- Enhance PRINCIPLES.md with additional cloud-native guidelines
- Update templates/STYLE_GUIDE.md with comprehensive code standards
- Add references directory with review notes

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>